--- a/extension.properties
+++ b/extension.properties
@@ -1,5 +1,5 @@
 name=Ghidrathon
 description=The FLARE team's open-source extension to add Python 3 scripting to Ghidra.
-author=Mike Hunhoff (michael.hunhoff@mandiant.com)
+author=Mike Hunhoff (mehunhoff@google.com)
 createdOn=03/31/2022
 version=@extversion@
