--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,6 @@ jobs:
         gradle-version: ["7.3"]
         ghidra-version: ["11.0"]
         public-version: ["PUBLIC_20231222"] # for ghidra releases
-        jep-version: ["4.2.0"]
         os: [ubuntu-20.04]
         # across all operating systems
         python-version: ["3.8", "3.12"]
@@ -38,4 +37,4 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Jep
-      run: pip install jep==${{ matrix.jep-version }}
+      run: pip install jep==4.2.0
