--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,10 +37,11 @@ jobs:
       run: |
         pip install jep==4.2.0
         python -c "import importlib.util;import pathlib;print(pathlib.Path(importlib.util.find_spec('jep').origin).parent)"
+    - name: Prepare for downloads
+      run: mkdir ./.github/ghidra
     - name: Download Ghidra Linux/macOS
       if : ${{ matrix.os != 'windows-2019' }}
       run: |
-        mkdir ./.github/ghidra
         wget ${{ matrix.ghidra-release-url }} -O ./.github/ghidra/ghidra.zip
     - name: Download Ghidra Windows
       if : ${{ matrix.os == 'windows-2019' }}
