--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         ghidra-release-url: ["https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_11.0_build/ghidra_11.0_PUBLIC_20231222.zip"]
         os: [ubuntu-20.04, windows-2019, macos-11]
-        python-version: ["3.8", "3.12"]
+        python-version: ["3.8"]
     steps:
     - name: Checkout Ghidrathon
       uses: actions/checkout@v4
@@ -38,13 +38,17 @@ jobs:
         pip install jep==4.2.0
         python -c "import importlib.util;import pathlib;print(pathlib.Path(importlib.util.find_spec('jep').origin).parent)"
     - name: Prepare for downloads
-      run: mkdir ./.github/ghidra
+      run: mkdir ./tmp
     - name: Download Ghidra Linux/macOS
       if : ${{ matrix.os != 'windows-2019' }}
       run: |
-        wget ${{ matrix.ghidra-release-url }} -O ./.github/ghidra/ghidra.zip
+        wget ${{ matrix.ghidra-release-url }} -O ./tmp/ghidra.zip
+        unzip ./tmp/ghidra.zip-d ./tmp/ghidra
+        mv ./tmp/ghidra/$(ls ghidra) ./tmp/ghidra/ghidra_PUBLIC
+        ls ./tmp/ghidra
     - name: Download Ghidra Windows
       if : ${{ matrix.os == 'windows-2019' }}
       shell: pwsh
       run: |
         Invoke-WebRequest -URI "${{ matrix.ghidra-release-url }}" -OutFile "./.github/ghidra/ghidra.zip"
+ 
