--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,11 +44,11 @@ jobs:
       run: |
         wget ${{ matrix.ghidra-release-url }} -O ./tmp/ghidra.zip
         unzip ./tmp/ghidra.zip -d ./tmp/ghidra
-        mv ./tmp/ghidra/$(ls ghidra) ./tmp/ghidra/ghidra_PUBLIC
+        mv ./tmp/ghidra/$(ls ./tmp/ghidra) ./tmp/ghidra/ghidra_PUBLIC
         ls ./tmp/ghidra
     - name: Download Ghidra Windows
       if : ${{ matrix.os == 'windows-2019' }}
       shell: pwsh
       run: |
-        Invoke-WebRequest -URI "${{ matrix.ghidra-release-url }}" -OutFile "./.github/ghidra/ghidra.zip"
+        Invoke-WebRequest -URI "${{ matrix.ghidra-release-url }}" -OutFile "./tmp/ghidra.zip"
  
