--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,31 +39,31 @@ jobs:
         pip install jep==4.2.0
         python -c "import importlib.util;import pathlib;print(pathlib.Path(importlib.util.find_spec('jep').origin).parent)"
     - name: Prepare for downloads
-      run: mkdir ./tmp
+      run: mkdir ../tmp
     - name: Download dependencies Linux/macOS
       if : ${{ matrix.os != 'windows-2019' }}
       run: |
-        wget ${{ matrix.ghidra-release-url }} -O ./tmp/ghidra.zip
-        unzip ./tmp/ghidra.zip -d ./tmp/ghidra
-        mv ./tmp/ghidra/$(ls ./tmp/ghidra) ./tmp/ghidra/ghidra_PUBLIC
+        wget ${{ matrix.ghidra-release-url }} -O ../tmp/ghidra.zip
+        unzip ../tmp/ghidra.zip -d ../tmp/ghidra
+        mv ../tmp/ghidra/$(ls ../tmp/ghidra) ../tmp/ghidra/ghidra_PUBLIC
         wget ${{ matrix.jep-jar-release-url }} -O ./lib/jep-4.2.0.jar
     - name: Download dependencies Windows
       if : ${{ matrix.os == 'windows-2019' }}
       shell: pwsh
       run: |
-        Invoke-WebRequest -URI "${{ matrix.ghidra-release-url }}" -OutFile "./tmp/ghidra.zip"
-        mkdir ./tmp/ghidra
-        tar -xf ./tmp/ghidra.zip -C ./tmp/ghidra
-        Rename-Item -Path "./tmp/ghidra/$((Get-ChildItem -Path "./tmp/ghidra").BaseName)" -NewName "ghidra_PUBLIC"
+        Invoke-WebRequest -URI "${{ matrix.ghidra-release-url }}" -OutFile "../tmp/ghidra.zip"
+        mkdir ../tmp/ghidra
+        tar -xf ../tmp/ghidra.zip -C ../tmp/ghidra
+        Rename-Item -Path "../tmp/ghidra/$((Get-ChildItem -Path "../tmp/ghidra").Name)" -NewName "ghidra_PUBLIC"
         Invoke-WebRequest -URI "${{ matrix.jep-jar-release-url }}" -OutFile "./lib/jep-4.2.0.jar"
     - name: Build Ghidrathon
-      run: gradle -PGHIDRA_INSTALL_DIR=${{ github.workspace }}/tmp/ghidra/ghidra_PUBLIC
+      run: gradle -PGHIDRA_INSTALL_DIR=${{ github.workspace }}/../tmp/ghidra/ghidra_PUBLIC
     - name: Install Ghidrathon Linux/macOS
       if : ${{ matrix.os != 'windows-2019' }}
-      run: unzip ./dist/$(ls ./dist) -d ./tmp/ghidra/ghidra_PUBLIC/Ghidra/Extensions/
+      run: unzip ./dist/$(ls ./dist) -d ../tmp/ghidra/ghidra_PUBLIC/Ghidra/Extensions/
     - name: Install Ghidrathon Windows
       if : ${{ matrix.os == 'windows-2019' }}
       shell: pwsh
       run: |
-        Rename-Item -Path "./dist/$((Get-ChildItem -Path "./dist").BaseName)" -NewName "Ghidrathon.zip"
-        tar -xf ./dist/Ghidrathon.zip -C ./tmp/ghidra/ghidra_PUBLIC/Ghidra/Extensions/
+        Rename-Item -Path "./dist/$((Get-ChildItem -Path "./dist").Name)" -NewName "Ghidrathon.zip"
+        tar -xf ./dist/Ghidrathon.zip -C ../tmp/ghidra/ghidra_PUBLIC/Ghidra/Extensions/
