--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,4 +71,4 @@ jobs:
     - name: Set Ghidrathon Python interpreter
       run: python -c "import sys;print(sys.executable)" > ../tmp/ghidra/ghidra_PUBLIC/ghidrathon.save
     - name: Run tests
-      run: ../tmp/ghidra/ghidra_PUBLIC/support/analyzeHeadless ${{ github.workspace }}/../tmp/ghidra test -Import ${{ github.workspace }}/../tmp/ghidra/ghidra_PUBLIC/GPL/DemanglerGnu/os/linux_x86_64/demangler_gnu_v2_24 -PostScript ${{ github.workspace }}/data/python/tests/hello.py
+      run: ../tmp/ghidra/ghidra_PUBLIC/support/analyzeHeadless ${{ github.workspace }}/../tmp/ghidra test -Import ${{ github.workspace }}/../tmp/ghidra/ghidra_PUBLIC/GPL/DemanglerGnu/os/linux_x86_64/demangler_gnu_v2_24 -PostScript ${{ github.workspace }}/data/python/tests/hello.py -PostScript ${{ github.workspace }}/data/python/tests/runall.py
