--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,13 +34,18 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Configure temp folder
+      run: mkdir ../tmp
+    - name: Activate Python virtual environment on Windows
+      if : ${{ matrix.os == 'windows-latest' }}
+      run: |
+        python -m venv ../tmp/env_test
+        ../tmp/env_test/activate.bat
     - name: Install Python Jep
       run: |
         pip install numpy
         pip install jep==4.2.0
         python -c "import importlib.util;import pathlib;print(pathlib.Path(importlib.util.find_spec('jep').origin).parent)"
-    - name: Prepare for downloads
-      run: mkdir ../tmp
     - name: Download dependencies Linux/macOS
       if : ${{ matrix.os != 'windows-latest' }}
       run: |
