--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
         distribution: "temurin"
         java-version: "17"
     - name: Setup Gradle
-      uses: gradle/gradle-build-action@40b6781dcdec2762ad36556682ac74e31030cfe2 # v2.5.1
+      uses: gradle/actions/setup-gradle@v3
       with:
         gradle-version: "7.3"
     - name: Setup Python ${{ matrix.python-version }}
